# ncs-serial-modem

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  COAP_COMMANDS.md  Kconfig  LICENSE  README.md  WIFI_SCAN_README.md  west.yml
.cursor/rules/: github-instructions.mdc
.github/: copilot-instructions.md
.github/instructions/: C-CODE.instructions.md  DOC.instructions.md
.github/workflows/: build.yml  compliance.yml  doc-build-and-publish-zoomin.yml  doc-build-pr.yml  doc-build.yml  doc-on-push-zoomin-publish.yml  doc-publish.yml  release.yaml
app/: CMakeLists.txt  Kconfig  README.rst  VERSION  overlay-carrier.conf  overlay-carrier.overlay  overlay-cmux.conf  overlay-coap.conf  overlay-disable-b0.overlay  overlay-disable-dtr.overlay  overlay-external-flash.overlay  overlay-external-mcu-nrf91x1.conf  overlay-external-mcu-nrf91x1.overlay  overlay-external-mcu.conf  overlay-external-mcu.overlay  overlay-full-fota.conf  overlay-full-fota.overlay  overlay-full_dfu.conf  overlay-full_fota.conf  overlay-memfault.conf  overlay-memfault.overlay  overlay-native_tls.conf  overlay-nrf-device-provisioning.conf  overlay-nrf91m1.overlay  overlay-nrf_cloud-coap.conf  overlay-pgps.overlay  overlay-ppp-cmux-linux.conf  overlay-ppp-without-cmux.conf  overlay-ppp-without-cmux.overlay  overlay-ppp.conf  overlay-smp-client.conf  overlay-smp-client.overlay  overlay-trace-backend-cmux.conf  overlay-trace-backend-uart.conf  overlay-trace-backend-uart.overlay  overlay-trace-backend.overlay  overlay-uart1-hwfc.overlay  overlay-zephyr-modem-nrf9160dk-nrf52840.conf  overlay-zephyr-modem-nrf9160dk-nrf52840.overlay  overlay-zephyr-modem.conf  (+6 more)
app/boards/: nrf9131ek_nrf9131_ns.conf  nrf9131ek_nrf9131_ns.overlay  nrf9151dk_nrf9151_ns.conf  nrf9151dk_nrf9151_ns.overlay  nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay  nrf9161dk_nrf9161_ns.conf  nrf9161dk_nrf9161_ns.overlay  thingy91_nrf9160_ns.conf  thingy91_nrf9160_ns.overlay  thingy91x_nrf9151_ns.conf  thingy91x_nrf9151_ns.overlay
app/cmake/: sm_version.cmake  write_sm_version_header.cmake
app/pytest/: test_serialmodem.py
app/scripts/: requirements.txt  sm2_ppp_dial.chat  sm2_ppp_dial_pdn.chat  sm2_start_cmux.sh  sm2_start_ppp.sh  sm2_stop_cmux.sh  sm_dfu_host.py  sm_start_ppp.sh  sm_stop_ppp.sh
app/src/: buttons.c  main.c  sm_at_coap.c  sm_at_commands.c  sm_at_dfu.c  sm_at_dfu.h  sm_at_fota.c  sm_at_fota.h  sm_at_gnss.c  sm_at_host.c  sm_at_host.h  sm_at_httpc.c  sm_at_httpc.h  sm_at_icmp.c  sm_at_icmp.h  sm_at_mqtt.c  sm_at_mqtt.h  sm_at_nrfcloud.c  sm_at_nrfcloud.h  sm_at_provisioning.c  sm_at_sms.c  sm_at_sms.h  sm_at_socket.c  sm_at_socket.h  sm_at_tcp_proxy.c  sm_at_tcp_proxy.h  sm_at_twi.h  sm_at_udp_proxy.c  sm_at_udp_proxy.h  sm_at_wifi.c  sm_auto_connect.h  sm_cmux.c  sm_cmux.h  sm_ctrl_pin.c  sm_ctrl_pin.h  sm_defines.h  sm_led.c  sm_led.h  sm_log.c  sm_log.h  (+14 more)
app/src/ftp_c/: CMakeLists.txt  Kconfig  sm_at_ftp.c  sm_at_ftp.h  sm_at_tftp.c
app/src/gnss/: CMakeLists.txt  Kconfig  sm_at_gnss.c  sm_at_gnss.h
app/src/gpio/: CMakeLists.txt  Kconfig  sm_at_gpio.c  sm_at_gpio.h
app/src/http_c/: CMakeLists.txt  Kconfig  sm_at_httpc.c  sm_at_httpc.h
app/src/lwm2m_carrier/: CMakeLists.txt  Kconfig  sm_at_carrier.c  sm_at_carrier.h  sm_at_carrier_cfg.c  sm_at_carrier_cfg.h
app/src/mqtt_c/: CMakeLists.txt  Kconfig  sm_at_mqtt.c
app/src/nativetls/: CMakeLists.txt  Kconfig  sm_at_cmng.c  sm_at_cmng.h  sm_native_tls.c  sm_native_tls.h
app/src/nrfcloud/: CMakeLists.txt  sm_at_nrfcloud.c  sm_at_nrfcloud.h
app/src/twi/: CMakeLists.txt  Kconfig  sm_at_twi.c
app/sysbuild/: CMakeLists.txt
app/sysbuild/b0/: prj.conf
app/sysbuild/b0/boards/: nrf9151dk_nrf9151.overlay  thingy91x_nrf9151.overlay
app/sysbuild/mcuboot/: prj.conf
app/sysbuild/mcuboot/boards/: nrf9151dk_nrf9151.overlay  thingy91_nrf9160.conf  thingy91x_nrf9151.conf
app/tests/at_commands/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/at_commands/include/tfm/: tfm_ioctl_api.h
app/tests/at_commands/include/zephyr/storage/: flash_map.h
app/tests/at_commands/src/: nrf_modem_at_wrapper.c  test_at_commands.c
app/tests/at_nrfcloud/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/at_nrfcloud/include/: date_time.h  nrf_cloud_coap_transport.h
app/tests/at_nrfcloud/include/net/: nrf_cloud.h  nrf_cloud_coap.h  nrf_cloud_location.h  wifi_location_common.h
app/tests/at_nrfcloud/src/: nrf_cloud_stubs.c  nrf_modem_at_wrapper.c  test_at_nrfcloud.c
app/tests/at_socket/: CMakeLists.txt  prj.conf  run_with_coverage.sh  testcase.yaml
app/tests/at_socket/include/: fw_info.h  pm_config.h
app/tests/at_socket/include/hal/: nrf_gpio.h
app/tests/at_socket/include/modem/: at_cmd_custom.h
app/tests/at_socket/src/: logging_stubs.c  nrf_modem_at_wrapper.c  sm_at_host_stubs.c  test_at_socket.c
app/tests/stubs/: at_cmd_custom_stubs.c  control_pin_stubs.c  kernel_stubs.c  pm_stubs.c  sm_at_host_stubs.c  sm_log_stubs.c  sm_workq.c  tfm_stubs.c  uart_stub.h  uart_stubs.c
cmake/: merged_hex.cmake
doc/: Doxyfile  conf.py  custom.properties  gsg_guide.rst  index.rst  links.txt  migration_notes.rst  release_notes.rst  shortcuts.txt  tags.yml  uart_configuration.rst  versions.json
doc/_doxygen/: main.md
doc/app/: AT_commands.rst  CARRIER_AT_commands.rst  CMUX_AT_commands.rst  FOTA_AT_commands.rst  FTP_AT_commands.rst  GNSS_AT_commands.rst  GPIO_AT_commands.rst  Generic_AT_commands.rst  HTTPC_AT_commands.rst  ICMP_AT_commands.rst  MQTT_AT_commands.rst  NRFCLOUD_AT_commands.rst  PPP_AT_commands.rst  PPP_linux.rst  README.rst  SOCKET_AT_commands.rst  TCPUDP_AT_commands.rst  TWI_AT_commands.rst  at_carrier.rst  at_cmux.rst  at_coap.rst  at_commands.rst  at_dfu.rst  at_fota.rst  at_generic.rst  at_gnss.rst  at_httpc.rst  at_icmp.rst  at_mqtt.rst  at_nrfcloud.rst  at_ppp.rst  at_provisioning.rst  (+17 more)
drivers/: CMakeLists.txt  Kconfig
include/: sm_at_client.h  sm_host.h
lib/: CMakeLists.txt  Kconfig
samples/sm_at_client_shell/sysbuild/: CMakeLists.txt
submanifests/: 00-ci-override.yml  00-ci-override.yml.template  00-upstream-fixes.yml
zephyr/: module.yml
(+89 files in other folders)
